Updated for first year at Dyson

--- a/dtd.html
+++ b/dtd.html
@@ -75,7 +75,7 @@
 			</div>
 
 		</header><!-- #header end -->
-		
+
 		<!-- Page Title
 		============================================= -->
 		<section id="page-title">
@@ -130,7 +130,7 @@
 							</div>
 						</div>
 						<!-- Portfolio Single - Meta End -->
-						
+
 					</div>
 
 					<!-- Portfolio Single Content
@@ -142,13 +142,13 @@
 						<div class="col_half nobottommargin">
 							<p>
 								This was my very first design course and I was given the freedom to pursue absolutely anything design-related; I chose to build a stool. However, I thought that just building a stool would be too easy. To challenge myself, I decided to do everything from scratch – from sourcing for materials, to designing and building the stool. Having never built anything in a workshop prior to this, I thought that it would be easy.
-								<br><br>I started by creating a CAD to visualise my design. My initial concept was to create dovetail joints, so that no nails or glue would be required to hold the stool together. I brought my initial concept down to the workshop and was instantly dismissed – the workshop was not equipped with the appropriate woodworking tools for making such accurate geometric cuts. I learnt my first lesson that day – no matter how aesthetic the design is, if it cannot be realised practically, it is worthless. 
+								<br><br>I started by creating a CAD to visualise my design. My initial concept was to create dovetail joints, so that no nails or glue would be required to hold the stool together. I brought my initial concept down to the workshop and was instantly dismissed – the workshop was not equipped with the appropriate woodworking tools for making such accurate geometric cuts. I learnt my first lesson that day – no matter how aesthetic the design is, if it cannot be realised practically, it is worthless.
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
 							<p>
-								I went back to the drawing board and soon decided to go with a simple square joint instead. With professional advice from the workshop trainers, I sourced for appropriate materials for my wooden stool – cedar dimensional lumber for the legs and oak plywood for the top and the skirts. In order to prepare all 14 pieces required for the stool, I learnt how to operate the various power tools in the shop. In addition, due to the revised joints, I had to fall back on nail gun and wood glue to hold the pieces in place. I wrapped up the entire project by sanding the rough edges and applying varnish to the exposed surfaces.  
+								I went back to the drawing board and soon decided to go with a simple square joint instead. With professional advice from the workshop trainers, I sourced for appropriate materials for my wooden stool – cedar dimensional lumber for the legs and oak plywood for the top and the skirts. In order to prepare all 14 pieces required for the stool, I learnt how to operate the various power tools in the shop. In addition, due to the revised joints, I had to fall back on nail gun and wood glue to hold the pieces in place. I wrapped up the entire project by sanding the rough edges and applying varnish to the exposed surfaces.
 								<br><br>The stool turned out to be so well-made that I used it in my room. Through this project, I learnt that design and manufacturing goes hand in hand, and it had been a humbling lesson on the importance of practicality.
 							</p>
 						</div>
@@ -170,6 +170,24 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
+										<img src="images/projects/dysonSG.jpg" alt="">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="dysonsg.html" class="social-icon" title="Dyson SG">
+											<h4>My very first job as a graduate engineer in the Dyson Global Product Verification and Testing Team.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Dyson SG</h3>
+								</div>
+							</div>
+						</div>
+
+						<div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
 										<img src="images/projects/pytorch.jpg" alt="fyp">
 									</a>
 									<div class="portfolio-overlay">
@@ -179,16 +197,16 @@
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3>Mechatronics</h3>
+									<h3>Final Year Project</h3>
 								</div>
 							</div>
 						</div>
-						
+
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
+										<img src="images/projects/mechatronics.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="mechatronics.html" class="social-icon" title="Mechatronics">
@@ -206,7 +224,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/nickel.jpg" alt="Open Imagination">
+										<img src="images/projects/nickel.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="nickel.html" class="social-icon" title="Nickel Feeder">
@@ -220,11 +238,29 @@
 							</div>
 						</div>
 
+						<!-- <div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
+										<img src="images/projects/dtd.jpg" alt="">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="dtd.html" class="social-icon" title="Design Thinking and Doing">
+											<h4>I attempted to design and build a stool from scratch. This was also my first attempt at woodworking.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Design Thinking and Doing</h3>
+								</div>
+							</div>
+						</div> -->
+
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/dyson.jpg" alt="Dyson Internship">
+										<img src="images/projects/dyson.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="dyson.html" class="social-icon" title="Dyson Internship">
@@ -242,7 +278,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/design.jpg" alt="Industrial Design">
+										<img src="images/projects/design.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="industrialdesign.html" class="social-icon" title="Industrial Design">
@@ -260,7 +296,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/robobrawl.jpg" alt="Robobrawl">
+										<img src="images/projects/robobrawl.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="robobrawl.html" class="social-icon" title="Robobrawl">
@@ -278,7 +314,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/PSA.jpg" alt="PSA GAME-IT Challenge">
+										<img src="images/projects/PSA.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="psa.html" class="social-icon" title="PSA GAME-IT Challenge">
@@ -296,7 +332,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/milkwatch.jpg" alt="Milkwatch">
+										<img src="images/projects/milkwatch.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="milkwatch.html" class="social-icon" title="Milkwatch">
