--- a/dysonsg.html
+++ b/dysonsg.html
@@ -28,7 +28,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Yao Xin Meng | PSA GAME-IT</title>
+	<title>Yao Xin Meng | Dyson Internship</title>
 	<link rel="icon" href="https://yaoxinmeng.github.io/favicon.ico">
 
 </head>
@@ -81,7 +81,7 @@
 		<section id="page-title">
 
 			<div class="container clearfix">
-				<h1>PSA GAME-IT Challenge</h1>
+				<h1>Graduate Engineer | Dyson</h1>
 			</div>
 
 		</section><!-- #page-title end -->
@@ -95,12 +95,12 @@
 
 					<!-- Portfolio Single Gallery - DTD
 					============================================= -->
-					<h2 class="t300 bottommargin-sm">A mobile game-making competition held by PSA</h2>
+					<h2 class="t300 bottommargin-sm">My first full-time role after graduating</h2>
 					<div class="col_full portfolio-single-image">
 						<div class="fslider" data-arrows="false" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/psa/main.png" alt=""></div>
+									<div class="slide"><img src="images/projects/dysonSG.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
@@ -114,14 +114,14 @@
 							<div class="card-body">
 								<div class="col_half nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-calendar-check"></i>Completed on:</span> Dec 2017</li>
-										<li><span><i class="icon-lightbulb"></i>Skills:</span> Unity | C#</li>
+										<li><span><i class="icon-calendar-check"></i>Started on:</span>March 2021</li>
+										<li><span><i class="icon-lightbulb"></i>Skills:</span>MATLAB | Python | NX | OpenCV</li>
 									</ul>
 								</div>
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-users"></i>Team Members:</span> Dennis | Jiaheng | Seetoh | Seng Wee</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/playlist?list=PLr4FWeKNYt_daThOcUWpIpxon5CmGH_to" target="_blank"> Video Demonstrations</a></li>
+										<li><span><i class="icon-users"></i>Team Members:</span>Zhi-en Tan | Richie Chia | Joanne Lim</li>
+										<li><span><i class="icon-link"></i>Gallery:</span>None</li>
 									</ul>
 								</div>
 							</div>
@@ -136,9 +136,18 @@
 
 						<!-- Portfolio Single - Description
 						============================================= -->
-						<div class="col_full_text col_full nobottommargin">
-							<p>I was part of the two-man team in charge of writing the code. This therefore marked the first time that I programmed something in a practical sense. Through this project, I gained confidence in programming, and it also marked the start of many more programming projects to come. For this competition, our team eventually claimed a top 8 spot and a cash prize.
+						<div class="col_half nobottommargin">
+							<p>
+								I first joined the Dyson Global Product Verification and Test (GPVT) team as a Graduate Engineer before converting to a Test Engineer after a year. The scope of my work was mainly in test method development, but I was also very much involved in designing and building test rigs.
+								<br><br>During my time in Dyson GPVT, I led multiple test development projects involving an assortment of Dyson products. During the course of these projects, I must engage various stakeholders to come to agreement on various issues, such as test requirements, test procedures, test scheduling, and test scope.
+								<br><br>In addition, I made it a point for myself to develop test rigs that are fully-automated or, at the very least, partially automated for the projects that I lead. This was implemented using microcontrollers such as Arduino, NI controllers in conjunction with LabVIEW, as well as UR robot arms.
 							</p>
+						</div>
+
+						<div class="col_half col_last nobottommargin">
+							<p>
+								In the same spirit as automating test rigs, I also wrote (and co-wrote) several scripts that aimed to automate post-testing data processing. This reduces the time required to manually process the data, and also reduces the risk of human errors. I implemented these data processing capabilites using Python, LabVIEW and MATLAB.
+								<br><br>Lastly, I was also heavily involved in developing image analysis capabilities within GPVT when I was not leading any major projects. Since my team deals with haircare products, image analysis of hair photos is frequently one of the test outputs. Therefore, it was helpful to have a fundamental understanding of how the image analysis scripts we used worked.
 						</div>
 						<!-- Portfolio Single - Description End -->
 
@@ -298,7 +307,7 @@
 							</div>
 						</div>
 
-						<!-- <div class="oc-item">
+						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
@@ -314,7 +323,7 @@
 									<h3>PSA GAME-IT Challenge</h3>
 								</div>
 							</div>
-						</div> -->
+						</div>
 
 						<div class="oc-item">
 							<div class="iportfolio">
