--- a/dysonuk.html
+++ b/dysonuk.html
@@ -75,13 +75,13 @@
 			</div>
 
 		</header><!-- #header end -->
-		
+
 		<!-- Page Title
 		============================================= -->
 		<section id="page-title">
 
 			<div class="container clearfix">
-				<h1>Dyson UK Internship</h1>
+				<h1>Intern | Dyson UK</h1>
 			</div>
 
 		</section><!-- #page-title end -->
@@ -127,7 +127,7 @@
 							</div>
 						</div>
 						<!-- Portfolio Single - Meta End -->
-						
+
 					</div>
 
 					<!-- Portfolio Single Content
@@ -138,8 +138,8 @@
 						============================================= -->
 						<div class="col_half nobottommargin">
 							<p>
-								The goal of my 10-week internship was to create a battery model using Matlab and to interface the model with a GUI that can be easily used by design engineers. There are therefore two main components to my project: 
-								<br><br>The first part involves the development of a battery model of reasonable fidelity and simplicity using the Simulink/Simscape tools within Matlab. The physical accuracy of the model can be determined by comparing the simulated data with actual experimental results. 
+								The goal of my 10-week internship was to create a battery model using Matlab and to interface the model with a GUI that can be easily used by design engineers. There are therefore two main components to my project:
+								<br><br>The first part involves the development of a battery model of reasonable fidelity and simplicity using the Simulink/Simscape tools within Matlab. The physical accuracy of the model can be determined by comparing the simulated data with actual experimental results.
 								<br><br>The second part is the development of a user-friendly application using the App Designer feature of Matlab. As the shift to a more model based design culture is still in its early stages, it is expected for my model to be developed further in the future. It is therefore crucial that my code is written such that it will be easy to integrate future models into my current model.
 							</p>
 						</div>
@@ -168,6 +168,24 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
+										<img src="images/projects/dysonSG.jpg" alt="">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="dysonsg.html" class="social-icon" title="Dyson SG">
+											<h4>My very first job as a graduate engineer in the Dyson Global Product Verification and Testing Team.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Dyson SG</h3>
+								</div>
+							</div>
+						</div>
+
+						<div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
 										<img src="images/projects/pytorch.jpg" alt="fyp">
 									</a>
 									<div class="portfolio-overlay">
@@ -177,16 +195,16 @@
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3>Mechatronics</h3>
+									<h3>Final Year Project</h3>
 								</div>
 							</div>
 						</div>
-						
+
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
+										<img src="images/projects/mechatronics.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="mechatronics.html" class="social-icon" title="Mechatronics">
@@ -204,7 +222,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/nickel.jpg" alt="Open Imagination">
+										<img src="images/projects/nickel.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="nickel.html" class="social-icon" title="Nickel Feeder">
@@ -222,7 +240,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/dtd.jpg" alt="Design Thinking and Doing">
+										<img src="images/projects/dtd.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="dtd.html" class="social-icon" title="Design Thinking and Doing">
@@ -236,11 +254,29 @@
 							</div>
 						</div>
 
+						<!-- <div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
+										<img src="images/projects/dyson.jpg" alt="">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="dyson.html" class="social-icon" title="Dyson Internship">
+											<h4>A 10-week internship program with Dyson UK that proved to be a great learning experience.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Dyson Internship</h3>
+								</div>
+							</div>
+						</div> -->
+
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/design.jpg" alt="Industrial Design">
+										<img src="images/projects/design.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="industrialdesign.html" class="social-icon" title="Industrial Design">
@@ -258,7 +294,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/robobrawl.jpg" alt="Robobrawl">
+										<img src="images/projects/robobrawl.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="robobrawl.html" class="social-icon" title="Robobrawl">
@@ -276,7 +312,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/PSA.jpg" alt="PSA GAME-IT Challenge">
+										<img src="images/projects/PSA.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="psa.html" class="social-icon" title="PSA GAME-IT Challenge">
@@ -294,7 +330,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/milkwatch.jpg" alt="Milkwatch">
+										<img src="images/projects/milkwatch.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="milkwatch.html" class="social-icon" title="Milkwatch">
