--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 						<div class="vertical-middle">
 							<div class="emphasis-title">
 								<h1>HI, I AM <strong>XIN MENG.</strong></h1>
-								<h3>I am an engineer with a passion for robotics and design.</h3>
+								<h3>I am a mechatronics engineer with a passion to make things work.</h3>
 							</div>
 							<a href="#" class="button button-border button-light button-circle button-align" data-scrollto="#section-works" data-easing="easeInOutExpo" data-speed="1250" data-offset="70" style="padding-right: 31px; padding-left: 31px;">View my Work</a>
-							<a href="images/Resume.pdf" target="_blank" class="button button-border button-light button-circle button-align">View my Resume</a> 
+							<a href="images/Resume.pdf" target="_blank" class="button button-border button-light button-circle button-align">View my Resume</a>
 						</div>
 					</div>
 
@@ -120,6 +120,22 @@
 					<!-- Portfolio Items
 					============================================= -->
 					<div class="row notopmargin divcenter" style="max-width: 1000px;">
+							<div class="col-md-6 bottommargin">
+								<div class="team">
+									<div class="team-image">
+										<img src="images/projects/dysonSG.jpg" alt="dysonSG">
+										<div class="team-overlay">
+											<a href="dysonsg.html" class="social-icon" title="Dyson SG">
+												<h3>My very first job as a graduate engineer in the Dyson Global Product Verification and Testing Team.
+												</h3>
+											</a>
+										</div>
+									</div>
+									<div class="team-desc team-desc-bg">
+										<div class="team-title"><h4>Dyson Singapore</h4></div>
+									</div>
+								</div>
+							</div>
 
 							<div class="col-md-6 bottommargin">
 								<div class="team">
@@ -194,14 +210,14 @@
 									<div class="team-image">
 										<img src="images/projects/dyson.jpg" alt="Dyson Internship">
 										<div class="team-overlay">
-											<a href="dyson.html" class="social-icon" title="Dyson Internship">
+											<a href="dysonuk.html" class="social-icon" title="Dyson UK Internship">
 												<h3>A 10-week internship program with Dyson UK that proved to be a great learning experience.
 												</h3>
 											</a>
 										</div>
 									</div>
 									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>Dyson Internship</h4></div>
+										<div class="team-title"><h4>Dyson UK Internship</h4></div>
 									</div>
 								</div>
 							</div>
@@ -246,7 +262,7 @@
 										<img src="images/projects/PSA.jpg" alt="PSA GAME-IT Challenge">
 										<div class="team-overlay">
 											<a href="psa.html" class="social-icon" title="PSA GAME-IT Challenge">
-												<h3>An exciting game-making competition that provided me with invaluable experience in programming. 
+												<h3>An exciting game-making competition that provided me with invaluable experience in programming.
 												</h3>
 											</a>
 										</div>
@@ -273,7 +289,7 @@
 									</div>
 								</div>
 							</div>
-							
+
 						</div>
 
 				</div>
@@ -327,7 +343,7 @@
 													</div>
 												</div>
 											</div>
-											
+
 										</div>
 									</div>
 								</div>
@@ -358,8 +374,9 @@
 						</div>
 
 						<div class="col-md-6 bottommargin-sm">
-							<p class="lead bottommargin" style="max-width: 800px;"><strong>Hi, I’m Xin Meng. I enjoy designing and making stuff.</strong> 
-								<br><br>I am currently enrolled in the Renaissance Engineering Program at Nanyang Technological University. I also am receiving a certificate in design from the Segal Design Institute at Northwestern University, Illinois. As a mechanical engineer, I found my passion in mechatronics and I embrace the technical challenges involved. It never ceases to amaze me when ideas in my head are brought to life with circuits and code.
+							<p class="lead bottommargin" style="max-width: 800px;"><strong>Hi, I’m Xin Meng. I enjoy designing and making stuff.</strong>
+								<br><br>I am currently working in Dyson as a Test Engineer (formerly a Graduate Engineer), where I get to design and build tests systems for an assortment of products. I was previously enrolled in the Renaissance Engineering Program at Nanyang Technological University, and completed a one-year design course from the Segal Design Institute at Northwestern University, Illinois.
+								<br><br>As a mechanical engineer, I found my passion in mechatronics and I embrace the technical challenges involved. It never ceases to amaze me when ideas in my head are brought to life with circuits and code.
 								<br><br>In my free time, I play video games, chinese flute, chinese chess, badminton and table tennis.
 								<br><br><a href="images/Resume.pdf" target="_blank" class="more-link">View my resume <i class="icon-angle-right"></i></a>
 							</p>
@@ -397,6 +414,6 @@
 	<!-- Footer Scripts
 	============================================= -->
 	<script src="js/functions.js"></script>
-	
+
 </body>
 </html>
