--- a/milkwatch.html
+++ b/milkwatch.html
@@ -75,7 +75,7 @@
 			</div>
 
 		</header><!-- #header end -->
-		
+
 		<!-- Page Title
 		============================================= -->
 		<section id="page-title">
@@ -127,7 +127,7 @@
 							</div>
 						</div>
 						<!-- Portfolio Single - Meta End -->
-						
+
 					</div>
 
 					<!-- Portfolio Single Content
@@ -138,15 +138,15 @@
 						============================================= -->
 						<div class="col_half nobottommargin">
 							<p>
-								This project started out as a simple idea – to give people accurate information regarding freshness of milk without having to taste or smell it. However, it quickly led to hours of research regarding the microbial fauna of milk, its curdling process, and the corresponding change in physical properties. 
-								<br><br>We eventually determined that the pH and dielectric constant are two easily detectable physical properties that indicate milk freshness. To measure these properties, we incorporated a pH indicator and a self-made capacitor into a custom milk jug. 
+								This project started out as a simple idea – to give people accurate information regarding freshness of milk without having to taste or smell it. However, it quickly led to hours of research regarding the microbial fauna of milk, its curdling process, and the corresponding change in physical properties.
+								<br><br>We eventually determined that the pH and dielectric constant are two easily detectable physical properties that indicate milk freshness. To measure these properties, we incorporated a pH indicator and a self-made capacitor into a custom milk jug.
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
 							<p>
 								The Milkwatch jug was successful in detecting changes in microbial level in milk. In addition, we realised that the fact that microbial levels affect the dielectric constant of the medium could have potential in non-chemical based detection of bacteria in water. It can provide almost instantaneous readings at the expense of some accuracy.
-								<br><br>For this project, I was given the sole responsibility of designing and fabricating the jug, as well as any rapid prototyping required. To do so, I learnt how to use Solidworks to create CAD models and operate 3D printers to bring the models to life. 
+								<br><br>For this project, I was given the sole responsibility of designing and fabricating the jug, as well as any rapid prototyping required. To do so, I learnt how to use Solidworks to create CAD models and operate 3D printers to bring the models to life.
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
@@ -167,6 +167,24 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
+										<img src="images/projects/dysonSG.jpg" alt="">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="dysonsg.html" class="social-icon" title="Dyson SG">
+											<h4>My very first job as a graduate engineer in the Dyson Global Product Verification and Testing Team.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Dyson SG</h3>
+								</div>
+							</div>
+						</div>
+
+						<div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
 										<img src="images/projects/pytorch.jpg" alt="fyp">
 									</a>
 									<div class="portfolio-overlay">
@@ -176,16 +194,16 @@
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3>Mechatronics</h3>
+									<h3>Final Year Project</h3>
 								</div>
 							</div>
 						</div>
-						
+
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
+										<img src="images/projects/mechatronics.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="mechatronics.html" class="social-icon" title="Mechatronics">
@@ -203,7 +221,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/nickel.jpg" alt="Open Imagination">
+										<img src="images/projects/nickel.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="nickel.html" class="social-icon" title="Nickel Feeder">
@@ -221,7 +239,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/dtd.jpg" alt="Design Thinking and Doing">
+										<img src="images/projects/dtd.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="dtd.html" class="social-icon" title="Design Thinking and Doing">
@@ -239,7 +257,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/dyson.jpg" alt="Dyson Internship">
+										<img src="images/projects/dyson.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="dyson.html" class="social-icon" title="Dyson Internship">
@@ -257,7 +275,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/design.jpg" alt="Industrial Design">
+										<img src="images/projects/design.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="industrialdesign.html" class="social-icon" title="Industrial Design">
@@ -275,7 +293,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/robobrawl.jpg" alt="Robobrawl">
+										<img src="images/projects/robobrawl.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="robobrawl.html" class="social-icon" title="Robobrawl">
@@ -293,7 +311,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/PSA.jpg" alt="PSA GAME-IT Challenge">
+										<img src="images/projects/PSA.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="psa.html" class="social-icon" title="PSA GAME-IT Challenge">
@@ -306,6 +324,24 @@
 								</div>
 							</div>
 						</div>
+
+						<!-- <div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
+										<img src="images/projects/milkwatch.jpg" alt="">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="milkwatch.html" class="social-icon" title="Milkwatch">
+											<h4>A product that keeps you informed about the freshness of milk and predicts when your milk is about to spoil.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Milkwatch</h3>
+								</div>
+							</div>
+						</div> -->
 
 					</div><!-- .portfolio-carousel end -->
 
