--- a/nickel.html
+++ b/nickel.html
@@ -75,7 +75,7 @@
 			</div>
 
 		</header><!-- #header end -->
-		
+
 		<!-- Page Title
 		============================================= -->
 		<section id="page-title">
@@ -131,7 +131,7 @@
 							</div>
 						</div>
 						<!-- Portfolio Single - Meta End -->
-						
+
 					</div>
 
 					<!-- Portfolio Single Content
@@ -148,7 +148,7 @@
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p>As a result, we decided to simplify the design by removing the pneumatic push-button valve. In its place, we implemented a random release system using microcontroller-controlled electric valves. While Nickel no longer has direct control over her feeding times, this new design still introduces irregularity into her daily schedule. 
+							<p>As a result, we decided to simplify the design by removing the pneumatic push-button valve. In its place, we implemented a random release system using microcontroller-controlled electric valves. While Nickel no longer has direct control over her feeding times, this new design still introduces irregularity into her daily schedule.
 							<br><br>From our testing at Shedd Aquarium, the dispensers worked underwater, but Nickel did not respond immediately to the dispensed greens. Based on client feedback, it might be due to Nickel's lack of experience with food sources from inanimate objects. However, he was confident that Nickel would eventually associate the dispensers with food and become less dependent on the trainers' schedule.
 							</p>
 						</div>
@@ -170,6 +170,24 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
+										<img src="images/projects/dysonSG.jpg" alt="">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="dysonsg.html" class="social-icon" title="Dyson SG">
+											<h4>My very first job as a graduate engineer in the Dyson Global Product Verification and Testing Team.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Dyson SG</h3>
+								</div>
+							</div>
+						</div>
+
+						<div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
 										<img src="images/projects/pytorch.jpg" alt="fyp">
 									</a>
 									<div class="portfolio-overlay">
@@ -179,16 +197,16 @@
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3>Mechatronics</h3>
+									<h3>Final Year Project</h3>
 								</div>
 							</div>
 						</div>
-						
+
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
+										<img src="images/projects/mechatronics.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="mechatronics.html" class="social-icon" title="Mechatronics">
@@ -202,11 +220,29 @@
 							</div>
 						</div>
 
+						<!-- <div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
+										<img src="images/projects/nickel.jpg" alt="">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="nickel.html" class="social-icon" title="Nickel Feeder">
+											<h4>A project in collaboration with the Shedd Aquarium to design a feeder for Nickel, the resident green sea turtle.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Nickel Feeder</h3>
+								</div>
+							</div>
+						</div> -->
+
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/dtd.jpg" alt="Design Thinking and Doing">
+										<img src="images/projects/dtd.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="dtd.html" class="social-icon" title="Design Thinking and Doing">
@@ -224,7 +260,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/dyson.jpg" alt="Dyson Internship">
+										<img src="images/projects/dyson.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="dyson.html" class="social-icon" title="Dyson Internship">
@@ -242,7 +278,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/design.jpg" alt="Industrial Design">
+										<img src="images/projects/design.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="industrialdesign.html" class="social-icon" title="Industrial Design">
@@ -260,7 +296,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/robobrawl.jpg" alt="Robobrawl">
+										<img src="images/projects/robobrawl.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="robobrawl.html" class="social-icon" title="Robobrawl">
@@ -278,7 +314,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/PSA.jpg" alt="PSA GAME-IT Challenge">
+										<img src="images/projects/PSA.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="psa.html" class="social-icon" title="PSA GAME-IT Challenge">
@@ -296,7 +332,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/milkwatch.jpg" alt="Milkwatch">
+										<img src="images/projects/milkwatch.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="milkwatch.html" class="social-icon" title="Milkwatch">
