--- a/robobrawl.html
+++ b/robobrawl.html
@@ -75,7 +75,7 @@
 			</div>
 
 		</header><!-- #header end -->
-		
+
 		<!-- Page Title
 		============================================= -->
 		<section id="page-title">
@@ -127,7 +127,7 @@
 							</div>
 						</div>
 						<!-- Portfolio Single - Meta End -->
-						
+
 					</div>
 
 					<!-- Portfolio Single Content
@@ -138,13 +138,13 @@
 						============================================= -->
 						<div class="col_half nobottommargin">
 							<p>
-								Our team wanted to create a robot that would dominate. To do so, we decided to build a lifting type robot. However, this type of robot had never been built before by the Northwestern Robotics Club and we had to start from scratch. 
-								<br><br>We designed the bodywork and lever mechanism of the robot, and I was placed in charge of creating the CAD files. Over the course of the quarter, we reiterated the design based on weight, material and fabrication constraints. 
+								Our team wanted to create a robot that would dominate. To do so, we decided to build a lifting type robot. However, this type of robot had never been built before by the Northwestern Robotics Club and we had to start from scratch.
+								<br><br>We designed the bodywork and lever mechanism of the robot, and I was placed in charge of creating the CAD files. Over the course of the quarter, we reiterated the design based on weight, material and fabrication constraints.
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p>However, we eventually pulled out of the competition as the motor controllers that we ordered failed to arrive on time. Though it was disappointing, I was still glad to be given the opportunity to learn and try out something different. 
+							<p>However, we eventually pulled out of the competition as the motor controllers that we ordered failed to arrive on time. Though it was disappointing, I was still glad to be given the opportunity to learn and try out something different.
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
@@ -165,6 +165,24 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
+										<img src="images/projects/dysonSG.jpg" alt="">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="dysonsg.html" class="social-icon" title="Dyson SG">
+											<h4>My very first job as a graduate engineer in the Dyson Global Product Verification and Testing Team.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Dyson SG</h3>
+								</div>
+							</div>
+						</div>
+
+						<div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
 										<img src="images/projects/pytorch.jpg" alt="fyp">
 									</a>
 									<div class="portfolio-overlay">
@@ -174,16 +192,16 @@
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3>Mechatronics</h3>
+									<h3>Final Year Project</h3>
 								</div>
 							</div>
 						</div>
-						
+
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
+										<img src="images/projects/mechatronics.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="mechatronics.html" class="social-icon" title="Mechatronics">
@@ -201,7 +219,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/nickel.jpg" alt="Open Imagination">
+										<img src="images/projects/nickel.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="nickel.html" class="social-icon" title="Nickel Feeder">
@@ -219,7 +237,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/dtd.jpg" alt="Design Thinking and Doing">
+										<img src="images/projects/dtd.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="dtd.html" class="social-icon" title="Design Thinking and Doing">
@@ -237,7 +255,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/dyson.jpg" alt="Dyson Internship">
+										<img src="images/projects/dyson.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="dyson.html" class="social-icon" title="Dyson Internship">
@@ -255,7 +273,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/design.jpg" alt="Industrial Design">
+										<img src="images/projects/design.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="industrialdesign.html" class="social-icon" title="Industrial Design">
@@ -269,11 +287,29 @@
 							</div>
 						</div>
 
+						<!-- <div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
+										<img src="images/projects/robobrawl.jpg" alt="">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="robobrawl.html" class="social-icon" title="Robobrawl">
+											<h4>My first robotics competition was an invaluable learning experience in designing and fabricating things within practical constraints.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Robobrawl</h3>
+								</div>
+							</div>
+						</div> -->
+
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/PSA.jpg" alt="PSA GAME-IT Challenge">
+										<img src="images/projects/PSA.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="psa.html" class="social-icon" title="PSA GAME-IT Challenge">
@@ -291,7 +327,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/milkwatch.jpg" alt="Milkwatch">
+										<img src="images/projects/milkwatch.jpg" alt="">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="milkwatch.html" class="social-icon" title="Milkwatch">
